--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="icon" href="img/favicon.ico"/>
     </head>
     <body>
-        <script src="src/Snake.js"></script>
-        <canvas id="canvas"></canvas>
+        <script src="src/javascript/Snakes.js"></script>
+        <canvas id="canvas" height="200px" width="200px"></canvas>
     </body>
 </html>
