--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     </head>
     <body>
         <script src="src/javascript/Snakes.js"></script>
-        <canvas id="canvas" height="200px" width="200px"></canvas>
+        <canvas id="canvas"></canvas>
+        <div id="menu"></div>
     </body>
 </html>
