add menu and menu functionality
change rainbow color functionality,
implement game over,
allow random to only change on button-click,
prevent canvas from shrinking beyond menu capabilities

--- a/index.html
+++ b/index.html
@@ -9,6 +9,63 @@
     <body>
         <script src="src/javascript/Snakes.js"></script>
         <canvas id="canvas"></canvas>
-        <div id="menu"></div>
+        <div id="menu">
+            <div id="options">
+                <p>Snake!</p>
+            </div>
+            <div id="playerNumTitle">
+                <p>Select number of players:</p>
+            </div>
+            <div id="playerNumOptions">
+                <button class="playerNum">1</button>
+                <button class="playerNum">2</button>
+            </div>
+            <div id="difficultyTitle">
+                <p>Select difficulty:</p>
+            </div>
+            <div id="difficultyOptions">
+                <button class="difficulty">1</button>
+                <button class="difficulty">2</button>
+                <button class="difficulty">3</button>
+                <button class="difficulty">4</button>
+                <button class="difficulty">5</button>
+            </div>
+            <div id="gridSizeTitle">
+                <p>Select size of grid:</p>
+            </div>
+            <div id="gridSizeOptions">
+                <button class="gridSize">1</button>
+                <button class="gridSize">2</button>
+                <button class="gridSize">3</button>
+                <button class="gridSize">4</button>
+                <button class="gridSize">5</button>
+            </div>
+            <div id="player1ColorTitle">
+                <p>Select player 1 color:</p>
+            </div>
+            <div class="player1ColorOptions">
+                <button class="player1Color">Red</button>
+                <button class="player1Color">Orange</button>
+                <button class="player1Color">Yellow</button>
+                <button class="player1Color">Green</button>
+                <button class="player1Color">Blue</button>
+                <button class="player1Color">Purple</button>
+                <button class="player1Color">Rainbow</button>
+                <button class="player1Color">Random</button>
+            </div>
+            <div id="player2ColorTitle">
+                 <p>Select player 2 color:</p>
+            </div>
+            <div class="player2ColorOptions">
+                <button class="player2Color">Red</button>
+                <button class="player2Color">Orange</button>
+                <button class="player2Color">Yellow</button>
+                <button class="player2Color">Green</button>
+                <button class="player2Color">Blue</button>
+                <button class="player2Color">Purple</button>
+                <button class="player2Color">Rainbow</button>
+                <button class="player2Color">Random</button>
+            </div>
+        </div>
     </body>
 </html>
