change colors, change difficulties, change menu resize, remove empty space, add consts, restructure project

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="icon" href="img/favicon.ico"/>
     </head>
     <body>
-        <script src="src/javascript/Snakes.js"></script>
+        <script src="src/Snakes.js"></script>
         <canvas id="canvas"></canvas>
         <div id="menu">
             <div id="options">
@@ -43,28 +43,28 @@
             <div id="player1ColorTitle">
                 <p>Select player 1 color:</p>
             </div>
-            <div class="player1ColorOptions">
-                <button class="player1Color">Red</button>
-                <button class="player1Color">Orange</button>
-                <button class="player1Color">Yellow</button>
-                <button class="player1Color">Green</button>
-                <button class="player1Color">Blue</button>
-                <button class="player1Color">Purple</button>
-                <button class="player1Color">Rainbow</button>
-                <button class="player1Color">Random</button>
+            <div id="player1ColorOptions">
+                <button class="red">Red</button>
+                <button class="orange">Orange</button>
+                <button class="yellow">Yellow</button>
+                <button class="green">Green</button>
+                <button class="blue">Blue</button>
+                <button class="purple">Purple</button>
+                <button class="rainbow">Rainbow</button>
+                <button class="random">Random</button>
             </div>
             <div id="player2ColorTitle">
                  <p>Select player 2 color:</p>
             </div>
-            <div class="player2ColorOptions">
-                <button class="player2Color">Red</button>
-                <button class="player2Color">Orange</button>
-                <button class="player2Color">Yellow</button>
-                <button class="player2Color">Green</button>
-                <button class="player2Color">Blue</button>
-                <button class="player2Color">Purple</button>
-                <button class="player2Color">Rainbow</button>
-                <button class="player2Color">Random</button>
+            <div id="player2ColorOptions">
+                <button class="red">Red</button>
+                <button class="orange">Orange</button>
+                <button class="yellow">Yellow</button>
+                <button class="green">Green</button>
+                <button class="blue">Blue</button>
+                <button class="purple">Purple</button>
+                <button class="rainbow">Rainbow</button>
+                <button class="random">Random</button>
             </div>
         </div>
     </body>
