--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <link rel="icon" href="img/favicon.ico"/>
     </head>
     <body>
-        <script src="src/Snakes.js"></script>
+        <script src="src/Snake.js"></script>
         <canvas id="canvas"></canvas>
         <div id="menu">
             <div id="options">
