add button memory, remove SnakeColors type, add start instructions

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <title></title>
+        <title>Snake!</title>
         <link rel="stylesheet" type="text/css" href="stylesheet.css">
         <link rel="icon" href="img/favicon.ico"/>
     </head>
@@ -11,7 +11,7 @@
         <canvas id="canvas"></canvas>
         <div id="menu">
             <div id="options">
-                <p>Snake!</p>
+                <p>Press space to play!</p>
             </div>
             <div id="playerNumTitle">
                 <p>Select number of players:</p>
