add pause screen fix menu bugs
menu showing on resize bug and
menu not recentering after game over bug

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <body>
         <script src="src/Snake.js"></script>
         <canvas id="canvas"></canvas>
+        <div id="pause">
+            <p>Press space to unpause!</p>
+        </div>
         <div id="menu">
             <div id="options">
                 <p>Press space to play!</p>
